--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -9,13 +9,18 @@
   <meta name="author" content="Bernhard Bockelbrink, James Priest, Liliana David">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/jquery-ui.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/jquery-ui.structure.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/menu/sm-core-css.css" | prepend: site.baseurl }}">
 
   <!-- for local testing: -->
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/jquery-ui.structure.css">
   <link rel="stylesheet" href="menu/sm-core-css.css">
 
   <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery-ui-1.12.1.min.js"></script>
   <script type="text/javascript" src="js/mousetrap.1.6.5.min.js"></script>
 
   <link rel="canonical" href="{{ page.url | prepend: site.baseurl | prepend: site.url | replace:'/index.html','/' }}">
@@ -32,5 +37,21 @@
       setAnnotationHref();
       hideWhenAnnotating();
     }
+    $( function() {
+      $( ".tooltip" ).tooltip({
+        position: {
+          my: "center bottom-20",
+          at: "center top",
+          using: function( position, feedback ) {
+            $( this ).css( position );
+            $( "<div>" )
+              .addClass( "arrow" )
+              .addClass( feedback.vertical )
+              .addClass( feedback.horizontal )
+              .appendTo( this );
+          }
+        }
+      });
+    } );
   </script>
 </head>
