--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -55,7 +55,7 @@
 
 </li>
 
-<li><a href="principle-empiricism.html"> The Principle of Empiricism</a>
+<li><a href="principle-empiricism.html">The Principle of Empiricism</a>
 
 </li>
 
@@ -115,11 +115,11 @@
 
 <li><a href="patterns.html">The Patterns</a>
 
-<li><a href="sensemaking-and-decisionmaking.html">Sensemaking and Decisionmaking</a>
+<li><a href="sense-making-and-decision-making.html">Sense-Making and Decision-Making</a>
 
 <ul>
 
-<li><a href="sensemaking-and-decisionmaking.html">Sensemaking and Decisionmaking</a>
+<li><a href="sense-making-and-decision-making.html">Sense-Making and Decision-Making</a>
 
 <li><a href="respond-to-organizational-drivers.html">Respond to Organizational Drivers</a>
 
@@ -133,7 +133,7 @@
 
 </li>
 
-<li><a href="consent-decision-making.html">Consent Decision Making</a>
+<li><a href="consent-decision-making.html">Consent Decision-Making</a>
 
 </li>
 
@@ -157,7 +157,7 @@
 
 </li>
 
-<li><a href="reasoned-decision-making.html">Reasoned Decision Making</a>
+<li><a href="reasoned-decision-making.html">Reasoned Decision-Making</a>
 
 </li>
 
