--- a/templates/website/pattern-map.html
+++ b/templates/website/pattern-map.html
@@ -8,7 +8,7 @@
 	<area shape=rect coords="40,170,160,240" href="https://${microsite_cname}/consent-decision-making.html">
 	<area shape=rect coords="170,250,290,320" href="https://${microsite_cname}/co-create-proposals.html">
 	<area shape=rect coords="170,90,290,160" href="https://${microsite_cname}/navigate-via-tension.html">
-	<area shape=rect coords="170,170,290,240" href="https://${microsite_cname}/test-arguments=qualify-as-objections.html">
+	<area shape=rect coords="170,170,290,240" href="https://${microsite_cname}/test-arguments-qualify-as-objections.html">
 	<area shape=rect coords="40,90,160,160" href="https://${microsite_cname}/respond-to-organizational-drivers.html">
 	<area shape=rect coords="300,90,420,160" href="https://${microsite_cname}/describe-organizational-drivers.html">
 	<area shape=rect coords="880,30,1260,80" href="https://${microsite_cname}/evolving-organizations.html">
@@ -94,4 +94,4 @@
 	<area shape=rect coords="1300,170,1420,240" href="https://${microsite_cname}/ask-for-help.html">
 	<area shape=rect coords="1300,30,1680,80" href="https://${microsite_cname}/peer-development.html">
 </map>
-<img border=0 src="img/pattern-map-72dpi.png" usemap="#GraffleExport">
+<img border=0 src="img/pattern-map-72dpi.png" alt="A map with all the patterns in S3" usemap="#GraffleExport">
