--- a/docs/_includes/pattern-map.html
+++ b/docs/_includes/pattern-map.html
@@ -8,7 +8,7 @@
 	<area shape=rect coords="40,170,160,240" href="https://patterns.sociocracy30.org/consent-decision-making.html">
 	<area shape=rect coords="170,250,290,320" href="https://patterns.sociocracy30.org/co-create-proposals.html">
 	<area shape=rect coords="170,90,290,160" href="https://patterns.sociocracy30.org/navigate-via-tension.html">
-	<area shape=rect coords="170,170,290,240" href="https://patterns.sociocracy30.org/test-arguments=qualify-as-objections.html">
+	<area shape=rect coords="170,170,290,240" href="https://patterns.sociocracy30.org/test-arguments-qualify-as-objections.html">
 	<area shape=rect coords="40,90,160,160" href="https://patterns.sociocracy30.org/respond-to-organizational-drivers.html">
 	<area shape=rect coords="300,90,420,160" href="https://patterns.sociocracy30.org/describe-organizational-drivers.html">
 	<area shape=rect coords="880,30,1260,80" href="https://patterns.sociocracy30.org/evolving-organizations.html">
@@ -94,4 +94,4 @@
 	<area shape=rect coords="1300,170,1420,240" href="https://patterns.sociocracy30.org/ask-for-help.html">
 	<area shape=rect coords="1300,30,1680,80" href="https://patterns.sociocracy30.org/peer-development.html">
 </map>
-<img border=0 src="img/pattern-map-72dpi.png" usemap="#GraffleExport">
+<img border=0 src="img/pattern-map-72dpi.png" alt="A map with all the patterns in S3" usemap="#GraffleExport">
