--- a/docs/_sass/_content.scss
+++ b/docs/_sass/_content.scss
@@ -46,7 +46,9 @@ article.post {
 
     // images
     // --------------------------------------------------------------------------
-
+    img.icon {
+        height: 22px;
+    }
     img {
         width: 80%;
 
