fixed icons on patterns page

--- a/docs/_sass/_content.scss
+++ b/docs/_sass/_content.scss
@@ -47,7 +47,9 @@ article.post {
     // images
     // --------------------------------------------------------------------------
     img.icon {
+        width: 22px;
         height: 22px;
+        vertical-align: left;        
     }
     img {
         width: 80%;
