--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-sm-8">
     <p><a href="https://sociocracy30.org/contact/">Contact Us</a> | <a href="disclaimer.html">Disclaimer</a> | <a href="acknowledgments.html">Acknowledgments</a></p>
-    <p class="hp-version">v2024-02-08</p>
+    <p class="hp-version">v2024-02-08a</p>
   </div>
   <div class="footer-col-bottom-right col-sm-4">
     <ul class="social-media-list">
