--- a/docs/_includes/menu.html
+++ b/docs/_includes/menu.html
@@ -72,7 +72,7 @@
           </li>
           <li><a href="consent-decision-making.html">Consent Decision-Making</a>
           </li>
-          <li><a href="test-arguments-qualify-as-objections.html">Test Arguments Qualify as Objections</a>
+          <li><a href="test-arguments-qualify-as-objections.html">Test If Arguments Qualify as Objections</a>
           </li>
           <li><a href="resolve-objections.html">Resolve Objections</a>
           </li>
@@ -93,17 +93,23 @@
           <li><a href="evolving-organizations.html">Evolving Organizations</a></li>
           <li><a href="clarify-and-develop-domains.html">Clarify and Develop Domains</a>
           </li>
-          <li><a href="delegate-influence.html">Delegate Influence</a>
+          <li><a href="manage-the-whole-system.html">Manage the Whole System</a>
+          </li>
+          <li><a href="enable-autonomy.html">Enable Autonomy</a>
+          </li>
+          <li><a href="collaborate-on-dependencies.html">Collaborate on Dependencies</a>
           </li>
           <li><a href="clarify-and-develop-strategy.html">Clarify and Develop Strategy</a>
           </li>
+          <li><a href="design-adaptable-systems.html">Design Adaptable Systems</a>
+          </li>
           <li><a href="align-flow.html">Align Flow</a>
+          </li>
+          <li><a href="open-systems.html">Open Systems</a>
           </li>
           <li><a href="create-a-pull-system-for-organizational-change.html">Create a Pull-System For Organizational Change</a>
           </li>
           <li><a href="driver-mapping.html">Driver Mapping</a>
-          </li>
-          <li><a href="open-systems.html">Open Systems</a>
           </li>
         </ul>
       </li>
@@ -131,11 +137,15 @@
           </li>
           <li><a href="involve-those-affected.html">Involve Those Affected</a>
           </li>
+          <li><a href="invest-in-ongoing-learning.html">Invest in Ongoing Learning</a>
+          </li>
           <li><a href="breaking-agreements.html">Breaking Agreements</a>
           </li>
-          <li><a href="transparent-salary.html">Transparent Salary</a>
+          <li><a href="financial-transparency.html">Financial Transparency</a>
           </li>
-          <li><a href="contract-for-successful-collaboration.html">Contract For Successful Collaboration</a>
+          <li><a href="share-costs-and-gains.html">Share Costs and Gains</a>
+          </li>
+          <li><a href="open-salary.html">Open Salary</a>
           </li>
           <li><a href="support-role.html">Support Role</a>
           </li>
@@ -155,6 +165,10 @@
           <li><a href="double-linking.html">Double Linking</a>
           </li>
           <li><a href="representative.html">Representative</a>
+          </li>
+          <li><a href="delegate-circle.html">Delegate Circle</a>
+          </li>
+          <li><a href="service-circle.html">Service Circle</a>
           </li>
           <li><a href="open-team.html">Open Team</a>
           </li>
@@ -180,6 +194,8 @@
       <li><a href="defining-agreements.html">Defining Agreements</a>
         <ul>
           <li><a href="defining-agreements.html">Defining Agreements</a></li>
+          <li><a href="contract-for-successful-collaboration.html">Contract For Successful Collaboration</a>
+          </li>
           <li><a href="record-agreements.html">Record Agreements</a>
           </li>
           <li><a href="clarify-intended-outcome.html">Clarify Intended Outcome</a>
@@ -239,6 +255,8 @@
           </li>
           <li><a href="visualize-work.html">Visualize Work</a>
           </li>
+          <li><a href="deliver-value-incrementally.html">Deliver Value Incrementally</a>
+          </li>
           <li><a href="pull-system-for-work.html">Pull-System For Work</a>
           </li>
           <li><a href="limit-work-in-progress.html">Limit Work in Progress</a>
@@ -249,13 +267,14 @@
           </li>
         </ul>
       </li>
-      <li><a href="organizational-structure.html">Organizational Structure</a>
+    </ul>
+  </li>
+  <li><a href="organizational-structure.html">Organizational Structure</a>
+    <ul>
+      <li><a href="organizational-structure.html">Organizational Structure</a></li>
+      <li><a href="examples-of-larger-structures.html">Examples of Larger Structures</a>
         <ul>
-          <li><a href="organizational-structure.html">Organizational Structure</a></li>
-          <li><a href="delegate-circle.html">Delegate Circle</a>
-          </li>
-          <li><a href="service-circle.html">Service Circle</a>
-          </li>
+          <li><a href="examples-of-larger-structures.html">Examples of Larger Structures</a></li>
           <li><a href="peach-organization.html">Peach Organization</a>
           </li>
           <li><a href="double-linked-hierarchy.html">Double-Linked Hierarchy</a>
@@ -278,40 +297,40 @@
       <li><a href="orientation.html">Orientation</a>
         <ul>
           <li><a href="orientation.html">Orientation</a></li>
-          <li><a href="clarify-purpose.html">Clarify Purpose</a>
+          <li><a href="principle-1-clarify-purpose.html">Clarify Purpose</a>
           </li>
-          <li><a href="develop-strategy.html">Develop Strategy</a>
+          <li><a href="principle-2-develop-strategy.html">Develop Strategy</a>
           </li>
         </ul>
       </li>
       <li><a href="navigation.html">Navigation</a>
         <ul>
           <li><a href="navigation.html">Navigation</a></li>
-          <li><a href="focus-on-value.html">Focus on Value</a>
+          <li><a href="principle-3-focus-on-value.html">Focus on Value</a>
           </li>
-          <li><a href="sense-respond.html">Sense & Respond</a>
+          <li><a href="principle-4-sense-respond.html">Sense & Respond</a>
           </li>
-          <li><a href="run-experiments.html">Run Experiments</a>
+          <li><a href="principle-5-run-experiments.html">Run Experiments</a>
           </li>
         </ul>
       </li>
       <li><a href="structure.html">Structure</a>
         <ul>
           <li><a href="structure.html">Structure</a></li>
-          <li><a href="enable-autonomy.html">Enable Autonomy</a>
+          <li><a href="principle-6-enable-autonomy.html">Enable Autonomy</a>
           </li>
-          <li><a href="collaborate-on-dependencies.html">Collaborate on Dependencies</a>
+          <li><a href="principle-7-collaborate-on-dependencies.html">Collaborate on Dependencies</a>
           </li>
         </ul>
       </li>
       <li><a href="transformation.html">Transformation</a>
         <ul>
           <li><a href="transformation.html">Transformation</a></li>
-          <li><a href="invest-in-learning.html">Invest in Learning</a>
+          <li><a href="principle-8-invest-in-learning.html">Invest in Learning</a>
           </li>
-          <li><a href="develop-culture.html">Intentionally Develop Culture</a>
+          <li><a href="principle-9-develop-culture.html">Intentionally Develop Culture</a>
           </li>
-          <li><a href="shared-mental-models.html">Build Shared Mental Models</a>
+          <li><a href="principle-10-shared-mental-models.html">Build Shared Mental Models</a>
           </li>
         </ul>
       </li>
