migration of templates to SASS 2.0

--- a/docs/_sass/_homepage.scss
+++ b/docs/_sass/_homepage.scss
@@ -10,7 +10,7 @@ $hp-box-grey-color-main:  #6c797f !default;
 article.homepage {
 
   .card { 
-    margin-bottom: $spacing-unit/2;
+    margin-bottom: $spacing-unit*0.5;
   }
   .hp-version {
     text-align: right;
