--- a/docs/_sass/_content.scss
+++ b/docs/_sass/_content.scss
@@ -40,7 +40,7 @@ article.post {
 .post-content {
 
     .summary {
-        margin-bottom: $spacing-unit / 2;
+        margin-bottom: $spacing-unit * 0.5;
         font-style: italic;
     }
 
@@ -131,8 +131,8 @@ article.post {
         font-weight: 700;
     }
     dd {
-        padding-left: $spacing-unit / 2;
-        padding-bottom: $spacing-unit / 2;
+        padding-left: $spacing-unit * 0.5;
+        padding-bottom: $spacing-unit * 0.5;
     }
     // special styles for glossary page
     dl.glossary {
@@ -145,7 +145,7 @@ article.post {
     blockquote {
         color: $grey-color;
         border-left: 4px solid $grey-color-light;
-        padding-left: $spacing-unit / 2;
+        padding-left: $spacing-unit * 0.5;
         font-style: italic;
 
         > :last-child {
