--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -18,10 +18,10 @@
     }
 
     .header-title, .header-icons {
-        margin-bottom: $spacing-unit / 2;
-        padding-top: $spacing-unit / 2;
+        margin-bottom: $spacing-unit * 0.5;
+        padding-top: $spacing-unit * 0.5;
         @include media-breakpoint-down(sm) {
-            margin-bottom: $spacing-unit / 4;
+            margin-bottom: $spacing-unit * 0.25;
             padding-top: 0px;
 
         }
@@ -71,14 +71,14 @@
 
 article.post {
     max-width: $content-max-width;
-    margin-top: $spacing-unit / 2;
+    margin-top: $spacing-unit * 0.5;
     margin-left: auto;
     margin-right: auto;
 
     .bottom-nav {
         .navigation {
             height: 40px;
-            margin-top: $spacing-unit / 2;
+            margin-top: $spacing-unit * 0.5;
             display: block;        
             white-space:nowrap;    
         }
@@ -89,12 +89,12 @@ article.post {
         }
         img.icon-prev {
             vertical-align: left;
-            padding-right: $spacing-unit / 2;
+            padding-right: $spacing-unit * 0.5;
             height: 40px;
         }
         img.icon-next {
             vertical-align: left;
-            padding-left: $spacing-unit / 2;
+            padding-left: $spacing-unit * 0.5;
             height: 40px;
         }
     }
@@ -104,10 +104,10 @@ article.post {
 // Footer
 // --------------------------------------------------------------------------
 .site-footer {
-    margin-top: $spacing-unit / 2;
+    margin-top: $spacing-unit * 0.5;
     .footer-top {
-        padding-top: $spacing-unit / 2;
-        padding-bottom: $spacing-unit / 2;
+        padding-top: $spacing-unit * 0.5;
+        padding-bottom: $spacing-unit * 0.5;
     }
     .footer-col-bottom-right {
         text-align: right;
