renamed patterns: - Record Agreements -> Record Governance Agreements - Evaluation Criteria -> Define and Monitor Metrics

--- a/templates/website/pattern-map.html
+++ b/templates/website/pattern-map.html
@@ -24,11 +24,11 @@
 	<area shape=rect coords="880,350,1260,400" href="https://${microsite_cname}/enablers-of-co-creation.html">
 	<area shape=rect coords="880,90,1000,160" href="https://${microsite_cname}/contract-for-successful-collaboration.html">
 	<area shape=rect coords="880,170,1000,240" href="https://${microsite_cname}/describe-deliverables.html">
-	<area shape=rect coords="1010,170,1130,240" href="https://${microsite_cname}/evaluation-criteria.html">
+	<area shape=rect coords="1010,170,1130,240" href="https://${microsite_cname}/define-and-monitor-metrics.html">
 	<area shape=rect coords="1140,90,1260,160" href="https://${microsite_cname}/clarify-intended-outcome.html">
 	<area shape=rect coords="880,250,1000,320" href="https://${microsite_cname}/logbook-keeper.html">
 	<area shape=rect coords="1140,170,1260,240" href="https://${microsite_cname}/logbook.html">
-	<area shape=rect coords="1010,90,1130,160" href="https://${microsite_cname}/record-agreements.html">
+	<area shape=rect coords="1010,90,1130,160" href="https://${microsite_cname}/record-governance-agreements.html">
 	<area shape=rect coords="880,30,1260,80" href="https://${microsite_cname}/defining-agreements.html">
 	<area shape=rect coords="1300,170,1420,240" href="https://${microsite_cname}/deliver-value-incrementally.html">
 	<area shape=rect coords="1300,250,1420,320" href="https://${microsite_cname}/timebox-activities.html">
